@@ -31,11 +31,11 @@ test convert {type conversions} -setup $SETUP -body {
     # Insert tuple
     duro::insert T1 {A 1 B 2.0 C 03} $tx
     
-    duro::table expr -global X {EXTEND T1 ADD (
-            A AS A_I, CAST_AS_FLOAT(A) * 2.0 AS A_R, "S" || CAST_AS_STRING(A) AS A_S,
-            CAST_AS_INTEGER(B) AS B_I, B * 2.0 AS B_R, "S" || CAST_AS_STRING(B) AS B_S,
-            CAST_AS_INTEGER(C) AS C_I, CAST_AS_FLOAT(C) * 2.0 AS C_R, "S" || C AS C_S,
-            B AS B_F)
+    duro::table expr -global X {EXTEND T1 : {
+            A_I := A, A_R := CAST_AS_FLOAT(A) * 2.0, A_S := "S" || CAST_AS_STRING(A),
+            B_I := CAST_AS_INTEGER(B), B_R := B * 2.0, B_S := "S" || CAST_AS_STRING(B),
+            C_I := CAST_AS_INTEGER(C), C_R := CAST_AS_FLOAT(C) * 2.0, C_S := "S" || C,
+            B_F := B}
     } $tx
 
     duro::commit $tx
