@@ -113,7 +113,7 @@ test ra {relational algebra} -setup $SETUP -body {
 
         insert t2 relation { tuple {a 2}, tuple {a 3} };
 
-        println(with t1 {a} as p, p intersect t2 as is: (tuple from is).a);
+        println(with (is := p intersect t2, p := t1 {a}): (tuple from is).a);
 
         commit;
     }
@@ -133,7 +133,7 @@ test updop {user defined update operators} -setup $SETUP -body {
             var tp init tuple {a 0, b "duro"};
             var r real relation same_heading_as(tp) key {a};
 
-            var v virtual (extend r add (b || 'x' as bx));
+            var v virtual (extend r : {bx := b || 'x'});
 
             commit;
         end operator;
