@@ -4,6 +4,8 @@ Summary of Changes for Duro
 
 Changes for Duro 0.15
 
+- Duro D/T: Changed WITH and EXTEND syntax according to Database Explorations.
+
 - Duro D/T now supports headings in relation selectors.
 
 - Duro D/T sets LC_CTYPE and LC_COLLATE locales according to the environment.
